infra/k8s/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Diz ao Traefik para usar HTTPS para falar com o pod interno do ArgoCD
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    # Evita quedas de conexão na interface web do ArgoCD
    traefik.ingress.kubernetes.io/router.protocols: "h2c"
spec:
  rules:
    - host: k3s-control-plane-1.tail783ccb.ts.net # Meu DNS do Tailscale
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
